Refine the css style making 'Midnight Lounge' vibe